added github link

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,6 +5,7 @@
   <mat-card-content>
       This project was made in LAB course
       Web Frameworks as an course assignment.
+      Source code https://github.com/aapokar/Angular-unitconverter
   </mat-card-content>
   <a routerLink="/" routerLinkActive="active">
     <i class="material-icons">home</i>
